Update author avatar path in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name     : "Suning Zhao"
-  avatar   : "/images/android-chrome-512x512.png"
+  avatar   : "images/avatar.jpg"
   bio      : "M.S. student in Data Science in Health (Biostatistics), UCLA"
   location : "Los Angeles, CA"
   employer : "UCLA Fielding School of Public Health"
