--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar   : "images/avatar.jpg"
   bio      : "M.S. student in Data Science in Health (Biostatistics), UCLA"
   location : "Los Angeles, CA"
-  employer : "UCLA Fielding School of Public Health"
+  employer : "UCLA FSPH"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&user=XiHRbEAAAAAJ"
   email            : "suning222@g.ucla.edu"
