Update navigation menu by removing and renaming items
Removed 'News', 'Honors and Awards' and replaced 'Invited Talks' with 'Research Experiences'.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,19 +3,13 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
-
   - title: "Publications"
     url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
 
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
+  - title: "Research Experiences"
     url: "/#-invited-talks"
 
   - title: "Internships"
