--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,19 @@
 # main links links
 
 main:
+
   - title: "About Me"
-    url: "/#about-me"
+    url: "#about-me"
 
   - title: "Publications"
-    url: "/#publications"
+    url: "#publications"
 
-  - title: "Educations"
-    url: "/#educations"
+  - title: "Education"
+    url: "#educations"
 
-  - title: "Research Experiences"
-    url: "/#research-experiences"
+  - title: "Research Experience"
+    url: "#research-experiences"
 
   - title: "Internships"
-    url: "/#internships"
+    url: "#internships"
+
