Update navigation URLs to include leading slash

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,17 @@
 # main links links
 
 main:
-
   - title: "About Me"
-    url: "#about-me"
+    url: "/#about-me"
 
   - title: "Publications"
-    url: "#publications"
+    url: "/#publications"
 
   - title: "Education"
-    url: "#educations"
+    url: "/#education"
 
   - title: "Research Experience"
-    url: "#research-experiences"
+    url: "/#research-experience"
 
   - title: "Internships"
-    url: "#internships"
-
+    url: "/#internships"
